chore(JIRA-10): update project folder structure for better organization

--- a/src/views/other/home.ejs
+++ b/src/views/other/home.ejs
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="es">
+<!-- Head -->
 <%- include("../partials/head",{title:"Inicio"}) %>
-<body>
-    <h1>Avanzando2</h1>
-</body>
+
+    <body>
+    </body>
+
 </html>
