chore(JIRA-13): add header structure and layout

--- a/src/views/other/home.ejs
+++ b/src/views/other/home.ejs
@@ -4,6 +4,11 @@
 <%- include("../partials/head",{title:"Inicio"}) %>
 
     <body>
+        <!-- Header -->
+        <%- include("../partials/header") %>
+
+        <!-- Scripts -->
+        <%- include("../partials/scripts") %>
     </body>
 
 </html>
