--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -6,9 +6,9 @@
                 <img src="images/workZone-logo.png" alt="Logo WorkZone" class="header__logo">
                 <ul class="header__nav-list">
                     <li class="header__nav-item"><a href="#" class="header__nav-link">Inicio</a></li>
-                    <li class="header__nav-item"><a href="#" class="header__nav-link">Productos</a></li>
-                    <li class="header__nav-item"><a href="#" class="header__nav-link">Acerca de</a></li>
-                    <li class="header__nav-item"><a href="#" class="header__nav-link">Contáctanos</a></li>
+                    <li class="header__nav-item"><a href="#products" class="header__nav-link">Productos</a></li>
+                    <li class="header__nav-item"><a href="#reviews" class="header__nav-link">Acerca de</a></li>
+                    <li class="header__nav-item"><a href="#contact" class="header__nav-link">Contáctanos</a></li>
                 </ul>
                 <div class="header__search-container">
                     <input type="text" placeholder="Buscar..." class="header__search-input">
@@ -36,9 +36,9 @@
                 </div>
                 <ul class="header__nav-list" id="header-nav-list">
                     <li class="header__nav-item"><a href="#" class="header__nav-link">Inicio</a></li>
-                    <li class="header__nav-item"><a href="#" class="header__nav-link">Productos</a></li>
-                    <li class="header__nav-item"><a href="#" class="header__nav-link">Acerca de</a></li>
-                    <li class="header__nav-item"><a href="#" class="header__nav-link">Contáctanos</a></li>
+                    <li class="header__nav-item"><a href="#products" class="header__nav-link">Productos</a></li>
+                    <li class="header__nav-item"><a href="#reviews" class="header__nav-link">Acerca de</a></li>
+                    <li class="header__nav-item"><a href="#contact" class="header__nav-link">Contáctanos</a></li>
                 </ul>
                 <div class="header__search-container">
                     <input type="text" placeholder="Buscar..." class="header__search-input" name="search">
