--- a/css/general.css
+++ b/css/general.css
@@ -1,21 +1,21 @@
 :root {
 /* Colores básicos */
 --orange: #E65100;       /* Naranja (primario) */
---gray: #37474F;         /* Gris oscuro (secundario) */
+--gray: #333333;         /* Gris oscuro (secundario) */
 --white: #ffffff;        /* Blanco (fondo) */
---yellow: #FDD835;       /* Amarillo (acento) */
---black: #212121;        /* Negro (texto) */
+--yellow: #F0A412;       /* Amarillo (acento) */
+--black: #000000;        /* Negro (texto) */
 
 /* Colores fuertes */
 --darkorange: #BF4500;   /* Naranja oscuro (para hover o elementos destacados) */
---darkgray: #263238;     /* Gris muy oscuro (para fondos o texto secundario) */
+--darkgray: #777777;     /* Gris muy oscuro (para fondos o texto secundario) */
 --darkwhite: #E0E0E0;    /* Gris claro (para fondos de secciones) */
 --darkyellow: #C6A700;   /* Amarillo oscuro (para textos o botones secundarios) */
 --darkblack: #000000;    /* Negro absoluto (para textos importantes o títulos) */
 
 /* Colores suaves */
 --lightorange: #FF7433;  /* Naranja claro (para hover o elementos destacados suaves) */
---lightgray: #546E7A;    /* Gris claro (para fondos o textos secundarios) */
+--lightgray: #dddddd;    /* Gris claro (para fondos o textos secundarios) */
 --lightwhite: #ffffff;    /* Blanco (para fondo) */
 --lightyellow: #FFFF6B;   /* Amarillo claro (para elementos suaves o destacados) */
 --lightblack: #484848;    /* Negro suave (para textos en fondos claros) */
@@ -30,6 +30,7 @@
   /* FONTS */
 --FamilyRoboto: 'Roboto', sans-serif;
 }
+
 *{
     font-family: var(--FamilyRoboto);
 }
