--- a/css/about.css
+++ b/css/about.css
@@ -3,7 +3,7 @@
 }
 
 .about__title{
-    color: var(--white);
+    color: var(--gris);
 }
 
 .about__content {
@@ -13,7 +13,7 @@
 
 .about__text {
     font-size: 1rem;
-    color: var(--white);
+    color: var(--gris);
     line-height: 1.8;
     padding: 20px;
     margin-bottom: 20px;
