--- a/css/general.css
+++ b/css/general.css
@@ -3,22 +3,23 @@
 --orange: #E65100;       /* Naranja (primario) */
 --gray: #333333;         /* Gris oscuro (secundario) */
 --white: #ffffff;        /* Blanco (fondo) */
---yellow: #F0A412;       /* Amarillo (acento) */
+--yellow: #FFDE00;       /* Amarillo (acento) */
 --black: #000000;        /* Negro (texto) */
 
 /* Colores fuertes */
 --darkorange: #BF4500;   /* Naranja oscuro (para hover o elementos destacados) */
 --darkgray: #777777;     /* Gris muy oscuro (para fondos o texto secundario) */
 --darkwhite: #E0E0E0;    /* Gris claro (para fondos de secciones) */
---darkyellow: #C6A700;   /* Amarillo oscuro (para textos o botones secundarios) */
+--darkyellow: #D4B800;   /* Amarillo oscuro (para textos o botones secundarios) */
 --darkblack: #000000;    /* Negro absoluto (para textos importantes o títulos) */
 
 /* Colores suaves */
 --lightorange: #FF7433;  /* Naranja claro (para hover o elementos destacados suaves) */
 --lightgray: #dddddd;    /* Gris claro (para fondos o textos secundarios) */
 --lightwhite: #ffffff;    /* Blanco (para fondo) */
---lightyellow: #FFFF6B;   /* Amarillo claro (para elementos suaves o destacados) */
+--lightyellow: #F9C97A;   /* Amarillo claro (para elementos suaves o destacados) */
 --lightblack: #484848;    /* Negro suave (para textos en fondos claros) */
+--lightblue:#3483FA;
 
 /* Colores adicionales para desarrollo */
 --blue: #2196F3;         /* Azul (para elementos de enlace o acción) */
@@ -43,5 +44,78 @@ body {
 
 a {
     text-decoration: none;
+    
 }
 
+.btn {
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 1rem;
+    /*font-weight: bold;*/
+    text-align: center;
+}
+
+.btn--primary {
+    background-color: var(--yellow);
+    color: var(--gris);
+}
+
+.btn--primary:hover {
+    background-color: var(--darkyellow);
+}
+
+.btn--secondary {
+    background-color: #f1f1f1;
+    border: 1px solid var(--white);
+    color: var(--gray);
+}
+
+.btn--secondary:hover {
+    background-color: var(--darkyellow);
+    border: 1px solid var(--white);
+    color: var(--white);
+}
+
+.label {
+    font-weight: 500;
+    margin-bottom: 5px;
+    display: inline-block;
+}
+
+.label--small{
+    margin: 0;
+    color: var(--gray);    
+    font-size: 0.9rem;
+    text-align: left;
+    margin-bottom: 5px;
+}
+
+.label--medium{
+    margin: 0 0 5px;
+    font-weight: bold;
+    text-align: left;
+    color: var(--gray);
+}
+
+.label--form {
+    color: var(--gray);
+    font-size: 1rem;
+}
+
+.input {
+    padding: 10px;
+    border: 1px solid var(--lightgray);
+    border-radius: 5px;
+    width: 100%;
+    box-sizing: border-box;
+    outline: none;
+    color: var(--gray);
+    font-size: 1rem;
+}
+
+.label--highlight {
+    color: #e74c3c;
+    font-size: 16px;
+}
