--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -3,17 +3,20 @@
         <div class="header__container">
             <!-- Navbar para Desktop -->
             <div class="header__navbar-desktop">
-                <img src="images/workZone-logo.png" alt="Logo WorkZone" class="header__logo">
-                <ul class="header__nav-list">
-                    <li class="header__nav-item"><a href="#" class="header__nav-link">Inicio</a></li>
-                    <li class="header__nav-item"><a href="#products" class="header__nav-link">Productos</a></li>
-                    <li class="header__nav-item"><a href="#reviews" class="header__nav-link">Acerca de</a></li>
-                    <li class="header__nav-item"><a href="#contact" class="header__nav-link">Contáctanos</a></li>
-                </ul>
-                <div class="header__search-container">
-                    <input type="text" placeholder="Buscar..." class="header__search-input">
-                    <button class="header__search-button"><i class="fas fa-search"></i></button>
+                <div class="header__navbar-img-list">
+                    <img src="images/workZone-logo.png" alt="Logo WorkZone" class="header__logo">
+                    <ul class="header__nav-list">
+                        <li class="header__nav-item"><a href="#" class="header__nav-link">Inicio</a></li>
+                        <li class="header__nav-item"><a href="#products" class="header__nav-link">Productos</a></li>
+                        <li class="header__nav-item"><a href="#reviews" class="header__nav-link">Acerca de</a></li>
+                        <li class="header__nav-item"><a href="#contact" class="header__nav-link">Contáctanos</a></li>
+                    </ul>
                 </div>
+                <div class="header__search-container">
+                    <input type="text" placeholder="Buscar..." class="header__search-input input">
+                    <button class="header__search-button btn"><i class="fas fa-search"></i></button>
+                </div>
+
                 <div class="header__icon-container">
                     <i class="fas fa-heart header__icon"></i>
                     <i class="fas fa-shopping-cart header__icon"></i>
@@ -41,10 +44,10 @@
                     <li class="header__nav-item"><a href="#contact" class="header__nav-link">Contáctanos</a></li>
                 </ul>
                 <div class="header__search-container">
-                    <input type="text" placeholder="Buscar..." class="header__search-input" name="search">
-                    <button class="header__search-button"><i class="fas fa-search"></i></button>
+                    <input type="text" placeholder="Buscar..." class="header__search-input input" name="search">
+                    <button class="header__search-button btn"><i class="fas fa-search"></i></button>
                 </div>
             </div>
         </div>
     </nav>
-</header>  
+</header>
