--- a/src/views/other/home.ejs
+++ b/src/views/other/home.ejs
@@ -297,7 +297,7 @@
                                 <div class="contact__info-content">
                                     <h3 class="label--medium">Chat en vivo</h3>
                                     <p class="label--small">¿Necesitas asistencia inmediata?</p>
-                                    <p class="label--small"><a href="#" class="contact__chat-link">Iniciar nuevo chat</a></p>                                    
+                                    <p class="label--small"><a href="https://wa.me/5491156092589" target="_blank" class="contact__chat-link">Iniciar nuevo chat</a></p>                                    
                                 </div>
                             </article>
                             <article class="contact__info-item">
@@ -334,6 +334,11 @@
                 </section>
                 <!-- /Section newsletter -->
             </main>
+            <!-- Icon whatsapp -->
+            <a href="https://wa.me/5491156092589" target="_blank" class="whatsapp-icon">
+                <i class="fab fa-whatsapp"></i>
+            </a>
+            <!-- /Icon whatsapp -->
             <!-- Scripts -->
             <%- include("../partials/scripts") %>
     </body>
