--- a/css/product.css
+++ b/css/product.css
@@ -1,102 +1,101 @@
 .products__grid {
-    padding: 0px 200px;
-    display: grid;
-    gap: 20px;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  padding: 0px 200px;
+  display: grid;
+  gap: 20px;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
 }
 
 .product-card {
-    background-color: var(--white);
-    border: 1px solid #ddd;
-    border-radius: 8px;
-    overflow: hidden;
-    position: relative;
-    transition: transform 0.3s ease, box-shadow 0.3s ease;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  background-color: var(--white);
+  border: 1px solid var(--lightgray);
+  border-radius: 8px;
+  overflow: hidden;
+  position: relative;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 .product-card:hover {
-    transform: translateY(-5px);
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+  transform: translateY(-5px);
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
 }
 
 .product-card__image-container {
-    position: relative;
+  position: relative;
 }
 
 .product-card__image {
-    width: 100%;
-    height: auto;
-    display: block;
+  width: 100%;
+  height: auto;
+  display: block;
 }
 
 .product-card__favorite-icon {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    color: var(--yellow);
-    font-size: 1.2rem;
-    font-weight: normal;
-    cursor: pointer;
-    transition: color 0.3s ease;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  color: var(--red);
+  font-size: 1.2rem;
+  font-weight: normal;
+  cursor: pointer;
+  transition: color 0.3s ease;
 }
 
 .product-card__favorite-icon:hover {
-    color: #e60023;
+  color: var(--darkred);
 }
 
 .product-card__info {
-    padding: 5px 15px;
-    text-align: left;
+  padding: 5px 15px;
+  text-align: left;
 }
 
 .product-card__category {
-    font-size: 0.9rem;
-    color: var(--gray);
-    margin: 5px 0px;
+  font-size: 1rem;
+  font-weight: 400;
+  color: var(--gray);
+  margin: 5px 0px;
 }
 
 .product-card__name {
-    font-size: 1.2rem;
-    font-weight: bold;
-    color: var(--gray);
-    margin: 5px 0px;
+  font-size: 1.2rem;
+  font-weight: bold;
+  color: var(--gray);
+  margin: 5px 0px;
 }
 
 .product-card__price {
-    font-size: 1.1rem;
-    color: #007BFF;
-    font-weight: bold;
-    margin: 5px 0px 15px 0px;
+  font-size: 1.2rem;
+  color: var(--green);
+  font-weight: bold;
+  margin: 5px 0px 15px 0px;
 }
 
 .product-card__add-button {
-    display: block;
-    width: 100%;
+  display: block;
+  width: 100%;
 }
 
 .products__view-more {
-    margin-top: 20px;
-    padding: 10px 20px;
-    font-size: 1rem;
-    color: #fff;
-    background-color: #007BFF;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-}
-
-.products__view-more:hover {
-    background-color: #0056b3;
+  margin-top: 20px;
 }
 
 @media (max-width: 1023px) {
-    .products__grid {
-        padding: 0px;    
-    }
+  .products__grid {
+    padding: 0px;
+  }
+  .product-card__category {
+    font-size: 0.875rem;
+  }
+  .product-card__name {
+    font-size: 1.25rem;
+  }
 }
 @media (max-width: 767px) {
-
+  .product-card__category {
+    font-size: 0.75rem;
+  }
+  .product-card__name {
+    font-size: 1rem;
+  }
 }
-
