--- a/css/reviews.css
+++ b/css/reviews.css
@@ -1,109 +1,125 @@
 .reviews__grid {
-    padding: 0px 200px;
-    display: grid;
-    gap: 20px;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  padding: 0px 200px;
+  display: grid;
+  gap: 20px;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
 }
 
 .review__card {
-    background-color: var(--white);
-    border: 1px solid #ddd;
-    padding: 20px;
-    border-radius: 8px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    transition: transform 0.3s;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  background-color: var(--white);
+  border: 1px solid var(--lightgray);
+  padding: 20px;
+  border-radius: 8px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  transition: transform 0.3s;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 .review__card:hover {
-    transform: translateY(-5px);
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+  transform: translateY(-5px);
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
 }
 
 .review__content {
-    margin-bottom: 15px;
+  margin-bottom: 15px;
 }
 
 .review__text {
-    font-size: 1rem;
-    color: var(--gray);
-    line-height: 1.6;
+  font-size: 1rem;
+  color: var(--gray);
+  line-height: 1.6;
 }
 
 .review__footer {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 
 .review__avatar {
-    width: 60px;
-    height: 60px;
-    border-radius: 50%;
-    margin-right: 15px;
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  margin-right: 15px;
 }
 
 .review__info {
-    display: flex;
-    flex-grow: 1;    
-    flex-direction: column;
+  display: flex;
+  flex-grow: 1;
+  flex-direction: column;
 }
 
 .review__name {
-    font-size: 1.1rem;
-    font-weight: bold;
-    color: var(--gray);
-    margin: 0;
-    margin-bottom: 5px;
-    text-align:left;
+  font-size: 1.2rem;
+  font-weight: bold;
+  color: var(--darkgray);
+  margin: 0;
+  margin-bottom: 5px;
+  text-align: left;
 }
 
 .review__description {
-    font-size: 0.9rem;
-    color: var(--lightgray);
-    margin-top: 0px;
-    margin-bottom: 5px;
-    text-align:left;
+  font-size: 0.9rem;
+  color: var(--gray);
+  margin-top: 0px;
+  margin-bottom: 5px;
+  text-align: left;
 }
 
 .review__social-icons {
-    display: flex;
-    justify-content: flex-end;
-    gap: 10px;
+  display: flex;
+  justify-content: flex-end;
+  gap: 10px;
 }
 
 .review__social-icons i {
-    font-size: 1.2rem;
-    color: var(--gray);
-    cursor: pointer;
-    transition: color 0.3s;
+  font-size: 1.2rem;
+  color: var(--darkgray);
+  cursor: pointer;
+  transition: color 0.3s;
 }
 
 .review__social-icons i:hover {
-    color: var(--lightblue);
+  color: var(--blue);
 }
 
 @media (max-width: 1023px) {
-    .reviews__grid {
-        padding: 0px;    
-    }
+  .reviews__grid {
+    padding: 0px;
+  }
+  .review__text {
+    font-size: 0.875rem;
+  }
+  .review__name {
+    font-size: 1.25rem;
+  }
+  .review__description {
+    font-size: 0.775rem;
+  }
 }
 @media (max-width: 767px) {
-    .reviews__grid {
-        grid-template-columns: 1fr;
-    }
-    
-    .review__card {
-        padding: 15px;
-    }
+  .reviews__grid {
+    grid-template-columns: 1fr;
+  }
 
-    .review__avatar {
-        width: 50px;
-        height: 50px;
-    }
+  .review__card {
+    padding: 15px;
+  }
 
-    .review__text {
-        font-size: 0.95rem;
-    }
+  .review__avatar {
+    width: 50px;
+    height: 50px;
+  }
+
+  .review__text {
+    font-size: 0.75rem;
+  }
+
+  .review__name {
+    font-size: 1rem;
+  }
+  .review__description {
+    font-size: 0.65rem;
+  }
 }
