--- a/css/warning.css
+++ b/css/warning.css
@@ -1,56 +1,74 @@
 .info-cards {
-    background-color: var(--yellow);
-    padding: 0px 200px;
-    display: flex;
-    flex-wrap: wrap;
-    gap: 20px;
-    
+  background-color: var(--yellow);
+  padding: 0px 200px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
 }
 
 .info-card {
-    background-color: var(--yellow);
-    padding: 10px;
-    display: flex;
-    align-items: center;
-    max-width: 280px;
+  background-color: var(--yellow);
+  padding: 10px;
+  display: flex;
+  align-items: center;
+  max-width: 280px;
 }
 
 .info-card__icon {
-    color: var(--gray);
-    font-size: 2.5rem;
-    padding: 10px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  color: var(--darkgray);
+  font-size: 2.5rem;
+  padding: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .info-card__content {
-    margin-left: 10px;
-    display: flex;
-    flex-direction: column;
+  margin-left: 10px;
+  display: flex;
+  flex-direction: column;
 }
 
 .info-card__title {
-    color: var(--gray);
-    font-size: 1.2rem;
-    font-weight: 500;
-    margin: 0;
+  font-size: 1.2rem;
+  font-weight: bold;
+  color: var(--darkgray);
+  margin: 0;
 }
 
 .info-card__description {
-    color: var(--gray);
-    font-size: 1rem;
-    margin-top: 5px;
+  font-size: 1rem;
+  font-weight: 400;
+  color: var(--gray);
+  margin-top: 5px;
 }
 
 @media (max-width: 1023px) {
-    .info-cards {     
-        padding: 0px;
-    }
+  .info-cards {
+    padding: 0px;
+  }
+  .info-card__icon {
+    font-size: 2rem;
+  }
+  .info-card__title {
+    font-size: 1.25rem;
+  }
+  .info-card__description {
+    font-size: 0.875rem;
+  }
 }
 
 @media (max-width: 767px) {
-    .info-cards {
-        justify-content: flex-start;
-    }
+  .info-cards {
+    justify-content: flex-start;
+  }
+  .info-card__icon {
+    font-size: 1.5rem;
+  }
+  .info-card__title {
+    font-size: 1rem;
+  }
+  .info-card__description {
+    font-size: 0.75rem;
+  }
 }
